objects/PD_Vehicle_Information__c/PD_Vehicle_Information__c.object-meta.xml
<CustomObject>
    <label>PD Vehicle Information</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PD Vehicle Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>