objects/PD_Vehicle_Information__c/fields/Amber_Light_Permit__c.field-meta.xml
<CustomField>
    <fullName>Amber_Light_Permit__c</fullName>
    <label>Amber Light Permit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>