objects/PD_Vehicle_Information__c/fields/CA_HW_License__c.field-meta.xml
<CustomField>
    <fullName>CA_HW_License__c</fullName>
    <label>CA HW License</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>