objects/PD_Vehicle_Information__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <label>Capacity</label>
    <length>50</length>
    <type>Text</type>
</CustomField>