objects/PD_Vehicle_Information__c/fields/Comments_Status__c.field-meta.xml
<CustomField>
    <fullName>Comments_Status__c</fullName>
    <label>Comments/Status</label>
    <length>250</length>
    <type>Text</type>
</CustomField>