objects/PD_Vehicle_Information__c/fields/CT_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>CT_HW_Permit__c</fullName>
    <label>CT HW Permit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>