objects/PD_Vehicle_Information__c/fields/Date_Sold__c.field-meta.xml
<CustomField>
    <fullName>Date_Sold__c</fullName>
    <label>Date Sold</label>
    <length>50</length>
    <type>Text</type>
</CustomField>