objects/PD_Vehicle_Information__c/fields/DE_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>DE_HW_Permit__c</fullName>
    <label>DE HW Permit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>