objects/PD_Vehicle_Information__c/fields/DE_SW_Permit__c.field-meta.xml
<CustomField>
    <fullName>DE_SW_Permit__c</fullName>
    <label>DE SW Permit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>