objects/PD_Vehicle_Information__c/fields/DEIC_Completed__c.field-meta.xml
<CustomField>
    <fullName>DEIC_Completed__c</fullName>
    <label>DEIC Completed</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>