objects/PD_Vehicle_Information__c/fields/Delcora__c.field-meta.xml
<CustomField>
    <fullName>Delcora__c</fullName>
    <label>Delcora</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>