objects/PD_Vehicle_Information__c/fields/DOT_Inspection__c.field-meta.xml
<CustomField>
    <fullName>DOT_Inspection__c</fullName>
    <label>DOT Inspection</label>
    <length>50</length>
    <type>Text</type>
</CustomField>