objects/PD_Vehicle_Information__c/fields/DOT_No__c.field-meta.xml
<CustomField>
    <fullName>DOT_No__c</fullName>
    <label>DOT No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>