objects/PD_Vehicle_Information__c/fields/DOT_Spec__c.field-meta.xml
<CustomField>
    <fullName>DOT_Spec__c</fullName>
    <label>DOT Spec</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>