objects/PD_Vehicle_Information__c/fields/Edgeboro__c.field-meta.xml
<CustomField>
    <fullName>Edgeboro__c</fullName>
    <label>Edgeboro</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>