objects/PD_Vehicle_Information__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <label>Equipment</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>