objects/PD_Vehicle_Information__c/fields/Equipment_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Group_ID__c</fullName>
    <label>Equipment Group ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>