objects/PD_Vehicle_Information__c/fields/equipment_type_2__c.field-meta.xml
<CustomField>
    <fullName>equipment_type_2__c</fullName>
    <label>equipment_type 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>