objects/PD_Vehicle_Information__c/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <label>Equipment Type</label>
    <length>2</length>
    <type>Text</type>
</CustomField>