objects/PD_Vehicle_Information__c/fields/External_Visual__c.field-meta.xml
<CustomField>
    <fullName>External_Visual__c</fullName>
    <label>External Visual</label>
    <length>50</length>
    <type>Text</type>
</CustomField>