objects/PD_Vehicle_Information__c/fields/EZ_Pass_Account__c.field-meta.xml
<CustomField>
    <fullName>EZ_Pass_Account__c</fullName>
    <label>EZ Pass Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>