objects/PD_Vehicle_Information__c/fields/EZ_Pass_Code__c.field-meta.xml
<CustomField>
    <fullName>EZ_Pass_Code__c</fullName>
    <label>EZ Pass Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>