objects/PD_Vehicle_Information__c/fields/EZ_Pass_Tag_Date__c.field-meta.xml
<CustomField>
    <fullName>EZ_Pass_Tag_Date__c</fullName>
    <label>EZ Pass Tag Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>