objects/PD_Vehicle_Information__c/fields/EZ_Pass_Tag_Status__c.field-meta.xml
<CustomField>
    <fullName>EZ_Pass_Tag_Status__c</fullName>
    <label>EZ Pass Tag Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>