objects/PD_Vehicle_Information__c/fields/Falls_Twp__c.field-meta.xml
<CustomField>
    <fullName>Falls_Twp__c</fullName>
    <label>Falls Twp</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>