objects/PD_Vehicle_Information__c/fields/Fleet__c.field-meta.xml
<CustomField>
    <fullName>Fleet__c</fullName>
    <label>Fleet #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>