objects/PD_Vehicle_Information__c/fields/Fuel__c.field-meta.xml
<CustomField>
    <fullName>Fuel__c</fullName>
    <label>Fuel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>