objects/PD_Vehicle_Information__c/fields/GA_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>GA_HW_Permit__c</fullName>
    <label>GA HW Permit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>