objects/PD_Vehicle_Information__c/fields/GL_Prefix__c.field-meta.xml
<CustomField>
    <fullName>GL_Prefix__c</fullName>
    <label>GL_Prefix</label>
    <length>50</length>
    <type>Text</type>
</CustomField>