objects/PD_Vehicle_Information__c/fields/GPS__c.field-meta.xml
<CustomField>
    <fullName>GPS__c</fullName>
    <label>GPS</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>