objects/PD_Vehicle_Information__c/fields/GVWR__c.field-meta.xml
<CustomField>
    <fullName>GVWR__c</fullName>
    <label>GVWR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>