objects/PD_Vehicle_Information__c/fields/H_Mat_Cert__c.field-meta.xml
<CustomField>
    <fullName>H_Mat_Cert__c</fullName>
    <label>H Mat Cert</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>