objects/PD_Vehicle_Information__c/fields/Hauler__c.field-meta.xml
<CustomField>
    <fullName>Hauler__c</fullName>
    <label>Hauler</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>