objects/PD_Vehicle_Information__c/fields/IA_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>IA_HW_Permit__c</fullName>
    <label>IA HW Permit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>