objects/PD_Vehicle_Information__c/fields/IL_Special_Permit__c.field-meta.xml
<CustomField>
    <fullName>IL_Special_Permit__c</fullName>
    <label>IL Special Permit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>