objects/PD_Vehicle_Information__c/fields/IN_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>IN_HW_Permit__c</fullName>
    <label>IN HW Permit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>