objects/PD_Vehicle_Information__c/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <label>Insurance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>