objects/PD_Vehicle_Information__c/fields/Internal_Visual__c.field-meta.xml
<CustomField>
    <fullName>Internal_Visual__c</fullName>
    <label>Internal Visual</label>
    <length>50</length>
    <type>Text</type>
</CustomField>