objects/PD_Vehicle_Information__c/fields/IRP_Fee__c.field-meta.xml
<CustomField>
    <fullName>IRP_Fee__c</fullName>
    <label>IRP Fee</label>
    <length>30</length>
    <type>Text</type>
</CustomField>