objects/PD_Vehicle_Information__c/fields/IRP_Registration__c.field-meta.xml
<CustomField>
    <fullName>IRP_Registration__c</fullName>
    <label>IRP Registration</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>