objects/PD_Vehicle_Information__c/fields/KS_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>KS_HW_Permit__c</fullName>
    <label>KS HW Permit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>