objects/PD_Vehicle_Information__c/fields/LA_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>LA_HW_Permit__c</fullName>
    <label>LA HW Permit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>