objects/PD_Vehicle_Information__c/fields/Leakage__c.field-meta.xml
<CustomField>
    <fullName>Leakage__c</fullName>
    <label>Leakage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>