objects/PD_Vehicle_Information__c/fields/Lease_to_APV__c.field-meta.xml
<CustomField>
    <fullName>Lease_to_APV__c</fullName>
    <label>Lease to APV</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>