objects/PD_Vehicle_Information__c/fields/MA_HW_Number__c.field-meta.xml
<CustomField>
    <fullName>MA_HW_Number__c</fullName>
    <label>MA HW Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>