objects/PD_Vehicle_Information__c/fields/MA_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>MA_HW_Permit__c</fullName>
    <label>MA HW Permit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>