objects/PD_Vehicle_Information__c/fields/Mahoning_County_OH__c.field-meta.xml
<CustomField>
    <fullName>Mahoning_County_OH__c</fullName>
    <label>Mahoning County, OH</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>