objects/PD_Vehicle_Information__c/fields/MD_Decal__c.field-meta.xml
<CustomField>
    <fullName>MD_Decal__c</fullName>
    <label>MD Decal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>