objects/PD_Vehicle_Information__c/fields/MD_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>MD_HW_Permit__c</fullName>
    <label>MD HW Permit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>