objects/PD_Vehicle_Information__c/fields/MD_Oil_Transporter__c.field-meta.xml
<CustomField>
    <fullName>MD_Oil_Transporter__c</fullName>
    <label>MD Oil Transporter</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>