objects/PD_Vehicle_Information__c/fields/ME_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>ME_HW_Permit__c</fullName>
    <label>ME HW Permit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>