objects/PD_Vehicle_Information__c/fields/ME_SW_Permit__c.field-meta.xml
<CustomField>
    <fullName>ME_SW_Permit__c</fullName>
    <label>ME SW Permit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>