objects/PD_Vehicle_Information__c/fields/MO_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>MO_HW_Permit__c</fullName>
    <label>MO HW Permit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>