objects/PD_Vehicle_Information__c/fields/MS_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>MS_HW_Permit__c</fullName>
    <label>MS HW Permit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>