objects/PD_Vehicle_Information__c/fields/NAV_Equip_Type__c.field-meta.xml
<CustomField>
    <fullName>NAV_Equip_Type__c</fullName>
    <label>NAV Equip Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>