objects/PD_Vehicle_Information__c/fields/NAV_Equip_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>NAV_Equip_Type_Code__c</fullName>
    <label>NAV Equip Type Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>