objects/PD_Vehicle_Information__c/fields/ND_SW_Permit__c.field-meta.xml
<CustomField>
    <fullName>ND_SW_Permit__c</fullName>
    <label>ND SW Permit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>