objects/PD_Vehicle_Information__c/fields/NJ_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>NJ_HW_Permit__c</fullName>
    <label>NJ HW Permit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>