objects/PD_Vehicle_Information__c/fields/NJ_Jurisdicition_Insp_Date__c.field-meta.xml
<CustomField>
    <fullName>NJ_Jurisdicition_Insp_Date__c</fullName>
    <label>NJ Jurisdicition Insp Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>