objects/PD_Vehicle_Information__c/fields/NJ_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>NJ_Jurisdiction__c</fullName>
    <label>NJ Jurisdiction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>