objects/PD_Vehicle_Information__c/fields/NJ_SW__c.field-meta.xml
<CustomField>
    <fullName>NJ_SW__c</fullName>
    <label>NJ SW</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>