objects/PD_Vehicle_Information__c/fields/NM_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>NM_HW_Permit__c</fullName>
    <label>NM HW Permit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>