objects/PD_Vehicle_Information__c/fields/NY_Fire_Account__c.field-meta.xml
<CustomField>
    <fullName>NY_Fire_Account__c</fullName>
    <label>NY Fire Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>