objects/PD_Vehicle_Information__c/fields/NY_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>NY_HW_Permit__c</fullName>
    <label>NY HW Permit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>