objects/PD_Vehicle_Information__c/fields/OH_Brine__c.field-meta.xml
<CustomField>
    <fullName>OH_Brine__c</fullName>
    <label>OH Brine</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>