objects/PD_Vehicle_Information__c/fields/OH_Permit__c.field-meta.xml
<CustomField>
    <fullName>OH_Permit__c</fullName>
    <label>OH Permit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>