objects/PD_Vehicle_Information__c/fields/Ontario_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>Ontario_HW_Permit__c</fullName>
    <label>Ontario HW Permit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>