objects/PD_Vehicle_Information__c/fields/Opacity_Test_last_done__c.field-meta.xml
<CustomField>
    <fullName>Opacity_Test_last_done__c</fullName>
    <label>Opacity Test (last done)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>