objects/PD_Vehicle_Information__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <length>50</length>
    <type>Text</type>
</CustomField>