objects/PD_Vehicle_Information__c/fields/PA_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>PA_HW_Permit__c</fullName>
    <label>PA HW Permit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>