objects/PD_Vehicle_Information__c/fields/PA_SW_Permit__c.field-meta.xml
<CustomField>
    <fullName>PA_SW_Permit__c</fullName>
    <label>PA SW Permit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>