objects/PD_Vehicle_Information__c/fields/permit_bk__c.field-meta.xml
<CustomField>
    <fullName>permit_bk__c</fullName>
    <label>permit bk</label>
    <length>50</length>
    <type>Text</type>
</CustomField>