objects/PD_Vehicle_Information__c/fields/permit_bk_status__c.field-meta.xml
<CustomField>
    <fullName>permit_bk_status__c</fullName>
    <label>permit bk status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>