objects/PD_Vehicle_Information__c/fields/Permits__c.field-meta.xml
<CustomField>
    <fullName>Permits__c</fullName>
    <label>Permits</label>
    <length>255</length>
    <type>Text</type>
</CustomField>