objects/PD_Vehicle_Information__c/fields/Permits_Imported__c.field-meta.xml
<CustomField>
    <fullName>Permits_Imported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permits Imported</label>
    <type>Checkbox</type>
</CustomField>