objects/PD_Vehicle_Information__c/fields/PM_Date__c.field-meta.xml
<CustomField>
    <fullName>PM_Date__c</fullName>
    <label>PM Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>