objects/PD_Vehicle_Information__c/fields/Pressure__c.field-meta.xml
<CustomField>
    <fullName>Pressure__c</fullName>
    <label>Pressure</label>
    <length>50</length>
    <type>Text</type>
</CustomField>