objects/PD_Vehicle_Information__c/fields/Previous_ID__c.field-meta.xml
<CustomField>
    <fullName>Previous_ID__c</fullName>
    <label>Previous ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>