objects/PD_Vehicle_Information__c/fields/Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Date__c</fullName>
    <label>Purchase Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>