objects/PD_Vehicle_Information__c/fields/PurchasePrice__c.field-meta.xml
<CustomField>
    <fullName>PurchasePrice__c</fullName>
    <label>PurchasePrice</label>
    <length>30</length>
    <type>Text</type>
</CustomField>