objects/PD_Vehicle_Information__c/fields/PVSC__c.field-meta.xml
<CustomField>
    <fullName>PVSC__c</fullName>
    <label>PVSC</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>