objects/PD_Vehicle_Information__c/fields/Quebec_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>Quebec_HW_Permit__c</fullName>
    <label>Quebec HW Permit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>