objects/PD_Vehicle_Information__c/fields/resource_type__c.field-meta.xml
<CustomField>
    <fullName>resource_type__c</fullName>
    <label>resource_type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>