objects/PD_Vehicle_Information__c/fields/RI_Decal__c.field-meta.xml
<CustomField>
    <fullName>RI_Decal__c</fullName>
    <label>RI Decal</label>
    <length>50</length>
    <type>Text</type>
</CustomField>