objects/PD_Vehicle_Information__c/fields/RI_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>RI_HW_Permit__c</fullName>
    <label>RI HW Permit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>