objects/PD_Vehicle_Information__c/fields/SD_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>SD_HW_Permit__c</fullName>
    <label>SD HW Permit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>