objects/PD_Vehicle_Information__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <label>Serial_Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>