objects/PD_Vehicle_Information__c/fields/Tank_Test_Date__c.field-meta.xml
<CustomField>
    <fullName>Tank_Test_Date__c</fullName>
    <label>Tank Test Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>