objects/PD_Vehicle_Information__c/fields/Thickness__c.field-meta.xml
<CustomField>
    <fullName>Thickness__c</fullName>
    <label>Thickness</label>
    <length>50</length>
    <type>Text</type>
</CustomField>