objects/PD_Vehicle_Information__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>