objects/PD_Vehicle_Information__c/fields/Title_Owner__c.field-meta.xml
<CustomField>
    <fullName>Title_Owner__c</fullName>
    <label>Title Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>