objects/PD_Vehicle_Information__c/fields/Trade_Waste__c.field-meta.xml
<CustomField>
    <fullName>Trade_Waste__c</fullName>
    <label>Trade Waste</label>
    <length>50</length>
    <type>Text</type>
</CustomField>