objects/PD_Vehicle_Information__c/fields/Unladen_Weight__c.field-meta.xml
<CustomField>
    <fullName>Unladen_Weight__c</fullName>
    <label>Unladen Weight</label>
    <length>50</length>
    <type>Text</type>
</CustomField>