objects/PD_Vehicle_Information__c/fields/Upper_Coupler__c.field-meta.xml
<CustomField>
    <fullName>Upper_Coupler__c</fullName>
    <label>Upper Coupler</label>
    <length>50</length>
    <type>Text</type>
</CustomField>