objects/PD_Vehicle_Information__c/fields/UT_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>UT_HW_Permit__c</fullName>
    <label>UT HW Permit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>