objects/PD_Vehicle_Information__c/fields/Vehicle_Imported__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Imported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vehicle Imported</label>
    <type>Checkbox</type>
</CustomField>