objects/PD_Vehicle_Information__c/fields/VT_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>VT_HW_Permit__c</fullName>
    <label>VT HW Permit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>