objects/PD_Vehicle_Information__c/fields/WA_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>WA_HW_Permit__c</fullName>
    <label>WA HW Permit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>