objects/PD_Vehicle_Information__c/fields/Westchester_Home_Improv__c.field-meta.xml
<CustomField>
    <fullName>Westchester_Home_Improv__c</fullName>
    <label>Westchester Home Improv</label>
    <length>5</length>
    <type>Text</type>
</CustomField>