objects/PD_Vehicle_Information__c/fields/WEX_ID__c.field-meta.xml
<CustomField>
    <fullName>WEX_ID__c</fullName>
    <label>WEX ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>