objects/PD_Vehicle_Information__c/fields/WI_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>WI_HW_Permit__c</fullName>
    <label>WI HW Permit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>