objects/PD_Vehicle_Information__c/fields/WY_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>WY_HW_Permit__c</fullName>
    <label>WY HW Permit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>