objects/PD_Vehicle_Information__c/fields/Year_Built__c.field-meta.xml
<CustomField>
    <fullName>Year_Built__c</fullName>
    <label>Year_Built</label>
    <length>255</length>
    <type>Text</type>
</CustomField>